https://issues.apache.org/jira/browse/AMQCPP-556

apply fix for deadlock on session stop()